# dictstruct

./: .buildinfo  .gitignore  AGENTS.md  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: benchmark.yaml  black.yaml  compile.yaml  deploy-docs.yaml  lint.yaml  mypy.yaml  pytest.yaml  release.yaml  setup.py
_modules/: index.html
_modules/dictstruct/: _lazy.html  _main.html  main.html
_sources/: index.rst.txt
_sources/source/: dictstruct.rst.txt  modules.rst.txt
benchmarks/: README.md  batch.py  data.py  test_dictstruct_benchmarks.py  test_lazydictstruct_benchmarks.py  utils.py
dictstruct/: __init__.py  _compiled.py  _lazy.py  _main.py  main.py
dictstruct.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: conf.py  index.rst
source/: dictstruct.html  modules.html
tests/: test_dictstruct.py  test_lazydictstruct.py  test_struct_fields.py
