[tool.poetry]
name = "dictstruct"
version = "0.0.6"
description = "A msgspec.Struct implementation compatible with the standard dictionary API"
authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]

[build-system]
requires = ["setuptools", "wheel", "mypy[mypyc]==1.16.1", "types-cachetools", "tomli>=2.0.0; python_version < '3.11'"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
msgspec = ">=0.18.5"

[tool.poetry.dev-dependencies]
pytest = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
