[tool.poetry]
name = "dictstruct"
version = "0.0.6"
description = "A msgspec.Struct implementation compatible with the standard dictionary API"
authors = ["BobTheBuidler <bobthebuidlerdefi@gmail.com>"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
msgspec = ">=0.18.5"

[tool.poetry.group.dev.dependencies]
pytest = "*"
sphinx = "*"
sphinx-rtd-theme = "*"
